# meshlet-lod

./: CMakeLists.txt  README.md
DX12Lib/inc/: CommandQueue.h
DX12Lib/src/: Application.cpp  Game.cpp
MeshletLoD/: CMakeLists.txt
MeshletLoD/assets/: AnimatedShark.glb  SceneList.txt  Torus.glb  torusInstances.glb
MeshletLoD/assets/scenes/: AnimatedTestScene.glb  HumanMocap.glb  TestScene.glb  Torus.glb  TorusManyInstances.glb  plane.glb  plane.lod_bak
MeshletLoD/inc/: Animation.h  Animator.h  Bone.h  DiscreteMeshletLoD.h  HLSLnames.h  Mesh.h  MeshletLoD.h  MeshletMesh.h  MeshletScene.h  Scene.h  ViewDependentMeshletLoD.h
MeshletLoD/shaders/: DiscreteMeshShader.hlsl  DiscreteTaskShader.hlsl  MeshShader.hlsl  ObjectCulling_ComputeShader.hlsl  PixelShader.hlsl  Structures.fxh  TaskShader.hlsl  ViewDependentComputeShader.hlsl  ViewDependentMeshShader.hlsl  ViewDependentPixelShader.hlsl  ViewDependentStructures.fxh  ViewDependentTaskShader.hlsl
MeshletLoD/src/: Animation.cpp  Animator.cpp  Bone.cpp  DiscreteMeshletLoD.cpp  Mesh.cpp  MeshletLoD.cpp  MeshletMesh.cpp  MeshletScene.cpp  Scene.cpp  ViewDependentMeshletLoD.cpp  main.cpp
